@@ -8,58 +8,65 @@ import com.example.application.UserRepository.UserRepository;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 public class UserImpl {
 
+    private final UserRepository userRepository;
+    private final RoleRepository roleRepository;
+    private final PasswordEncoder passwordEncoder;
 
-    private UserRepository userRepository;
-
-    private RoleRepository roleRepository;
-
-    private PasswordEncoder passwordEncoder;
-
+    public UserImpl(UserRepository userRepository, RoleRepository roleRepository, PasswordEncoder passwordEncoder) {
+        this.userRepository = userRepository;
+        this.roleRepository = roleRepository;
+        this.passwordEncoder = passwordEncoder;
+    }
 
     public void saveUser(UserDto userDto) {
         User user = new User();
         user.setName(userDto.getFirstName() + " " + userDto.getLastName());
         user.setEmail(userDto.getEmail());
-
-            //encrypt the password once we integrate spring security
-            //user.setPassword(userDto.getPassword());
         user.setPassword(passwordEncoder.encode(userDto.getPassword()));
-        Role role = roleRepository.findByName("ROLE_ADMIN");
-        if(role == null){
+        Role role = roleRepository.findByRole("ROLE_ADMIN");
+        if (role == null) {
             role = checkRoleExist();
         }
-        user.setRoles(List.of(role));
+        user.setRoles(Collections.singletonList(role));
         userRepository.save(user);
     }
 
-
     public User findByEmail(String email) {
-            return userRepository.findByEmail(email);
-        }
+        return userRepository.findByEmail(email);
+    }
+
+    private Role checkRoleExist() {
+        Role role = new Role();
+        role.setRole("ROLE_ADMIN");
+        roleRepository.save(role);
+        return role;
+    }
+
     public List<UserDto> findAllUsers() {
         List<User> users = userRepository.findAll();
         return users.stream().map((user) -> convertEntityToDto(user))
                 .collect(Collectors.toList());
     }
 
-    private UserDto convertEntityToDto(User user){
+    private UserDto convertEntityToDto(User user) {
         UserDto userDto = new UserDto();
         String[] name = user.getName().split(" ");
-        userDto.setFirstName(name[0]);
-        userDto.setLastName(name[1]);
+
+        if (name.length > 0) {
+            userDto.setFirstName(name[0]);
+        }
+        if (name.length > 1) {
+            userDto.setLastName(name[1]);
+        }
+
         userDto.setEmail(user.getEmail());
         return userDto;
-    }
-
-    private Role checkRoleExist() {
-        Role role = new Role();
-        role.setName("ROLE_ADMIN");
-        return roleRepository.save(role);
     }
 }
